<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_view_desc"
            android:scaleType="centerCrop" />

        <com.example.sketch.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/color_picker_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/orange_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/orange_bg"
            android:contentDescription="@string/orange_color_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/red_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/red_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/red_bg"
            android:contentDescription="@string/red_color_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/blue_button"
            app:layout_constraintStart_toEndOf="@id/orange_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/blue_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/blue_bg"
            android:contentDescription="@string/blue_color_desc"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/green_button"
            app:layout_constraintStart_toEndOf="@id/red_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/green_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/green_bg"
            android:contentDescription="@string/green_color_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/purple_button"
            app:layout_constraintStart_toEndOf="@id/blue_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/purple_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/purple_bg"
            android:contentDescription="@string/purple_color_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/green_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/save_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/save_button_desc"
        android:scaleType="centerInside"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gallery_button"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/gallery_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/gallery_button_desc"
        android:scaleType="centerInside"
        android:src="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/color_picker_button"
        app:layout_constraintStart_toEndOf="@id/save_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/color_picker_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/color_button_desc"
        android:scaleType="centerInside"
        android:src="@drawable/ic_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/brush_button"
        app:layout_constraintStart_toEndOf="@id/gallery_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/brush_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:contentDescription="@string/brush_button_desc"
        android:scaleType="fitXY"
        android:src="@drawable/ic_brush"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/undo_button"
        app:layout_constraintStart_toEndOf="@id/color_picker_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/undo_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:background="@null"
        android:contentDescription="@string/undo_button_desc"
        android:scaleType="centerInside"
        android:src="@drawable/ic_undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/brush_button" />

</androidx.constraintlayout.widget.ConstraintLayout>








